[build-system]
requires = [
  "setuptools>=64",
  "setuptools_scm[toml]>=8"
]
build-backend = "setuptools.build_meta"

[project]
name = "pytead"
dynamic = ["version"]
description = "Trace real Python function calls and generate pytest tests & enrich doc."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENCE" }
authors = [
  { name = "Nathan Palluau", email = "nathan.palluau@gmail.com" }
]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Testing",
  "License :: OSI Approved :: MIT License"
]
keywords = ["testing", "pytest", "tracing", "automation"]
dependencies = [
  "tomli; python_version < '3.11'",
  "pyyaml>=6.0"
]

[project.scripts]
pytead = "pytead.cli:main"

[project.urls]
Homepage      = "https://github.com/nathanap2/pytead"
Repository    = "https://github.com/nathanap2/pytead"
Documentation = "https://github.com/nathanap2/pytead#readme"


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pytead*"]

[tool.setuptools.package-data]
pytead = ["default_config.toml"]

